# chunky-mcp

./: README.md  chunker.py  main.py  pyproject.toml  test_tool.py
chunky_mcp/: main.py
