[project]
name = "chunky-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chunky-mcp-utils==0.1.3",
    "mcp[cli]>=1.9.4",
    "requests",
]

[project.scripts]
chunky-mcp = "chunky_mcp.main:main"

[tool.setuptools]
packages = ["chunky_mcp"]
