[project]
name = "chunky-mcp"
version = "0.1.0"
description = "An MCP server to chunk large tool outputs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chunky-mcp-utils==0.1.3",
    "mcp[cli]>=1.9.4",
]

[project.scripts]
chunky-mcp = "chunky_mcp.main:main"

[tool.setuptools]
packages = ["chunky_mcp"]
